tests/cases/meta/ok/item-macro-module-use-identity.ari
meta fn make_item(input: token_stream) -> token_stream {
}

make_item!(
  mod Generated {
    pub fn value() -> i64 {
      return 40;
    }
  }

  use Generated::value as generated_value;
);

fn main() -> i64 {
  return generated_value() + 2;
}
