tests/cases/meta/errors/macro-call-unknown.ari
fn main() -> i64 {
  return missing!(1);
}
